--- a/esadmin.html
+++ b/esadmin.html
@@ -148,6 +148,19 @@
 </head>
 
 <body>
+<!-- Global navigation (added) -->
+<div id="globalNav" style="position:fixed;top:16px;left:16px;z-index:9999;display:flex;gap:10px;align-items:center;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;">
+  <button type="button"
+    onclick="(window.history.length>1)?window.history.back():window.location.href='index.html'"
+    style="cursor:pointer;border:1px solid rgba(0,0,0,.12);background:#ffffff;color:#111;padding:10px 12px;border-radius:12px;box-shadow:0 10px 25px rgba(0,0,0,.10);font-weight:600;">
+    ← Powrót
+  </button>
+  <a href="index.html"
+    style="text-decoration:none;border:1px solid rgba(0,0,0,.12);background:#ffffff;color:#111;padding:10px 12px;border-radius:12px;box-shadow:0 10px 25px rgba(0,0,0,.10);font-weight:600;display:inline-flex;gap:8px;align-items:center;">
+    🏠 Strona główna
+  </a>
+</div>
+
   <div class="topbar">
     <button onclick="logout()">Cerrar sesión</button>
   </div>
@@ -400,6 +413,70 @@
     }
 
     searchInput.addEventListener("input", renderUsers);
-  </script>
+  
+  // --- Helpers: access durations (A1 = days, A2/B1/B2 = months) ---
+  function addDays(date, days){
+    const d = new Date(date.getTime());
+    d.setDate(d.getDate() + days);
+    return d;
+  }
+  function addMonths(date, months){
+    const d = new Date(date.getTime());
+    d.setMonth(d.getMonth() + months);
+    return d;
+  }
+
+  async function grantAccess(userId, level, daysOrMonths){
+    const ref = doc(db, "users", userId);
+    const snap = await getDoc(ref);
+    const data = snap.exists() ? (snap.data() || {}) : {};
+    const access = { ...(data.access || {}) };
+
+    const now = new Date();
+    const until = (level === "A1")
+      ? addDays(now, Number(daysOrMonths)||7)
+      : addMonths(now, Number(daysOrMonths)||3);
+
+    access[level] = { freeUntil: until.toISOString() };
+
+    await setDoc(ref, { access, updatedAt: serverTimestamp() }, { merge: true });
+    toast(`✅ ${level}: acceso hasta ${until.toLocaleString()}`);
+    await refreshUsers();
+  }
+
+  async function extendAccess(userId, level, daysOrMonths){
+    const ref = doc(db, "users", userId);
+    const snap = await getDoc(ref);
+    const data = snap.exists() ? (snap.data() || {}) : {};
+    const access = { ...(data.access || {}) };
+
+    const base = access[level]?.freeUntil ? new Date(access[level].freeUntil) : new Date();
+    const safeBase = isNaN(base.getTime()) ? new Date() : base;
+
+    const until = (level === "A1")
+      ? addDays(safeBase, Number(daysOrMonths)||7)
+      : addMonths(safeBase, Number(daysOrMonths)||3);
+
+    access[level] = { freeUntil: until.toISOString() };
+
+    await setDoc(ref, { access, updatedAt: serverTimestamp() }, { merge: true });
+    toast(`⏳ ${level}: extendido hasta ${until.toLocaleString()}`);
+    await refreshUsers();
+  }
+
+  async function revokeAccess(userId, level){
+    const ref = doc(db, "users", userId);
+    const snap = await getDoc(ref);
+    const data = snap.exists() ? (snap.data() || {}) : {};
+    const access = { ...(data.access || {}) };
+
+    if(access[level]) delete access[level];
+
+    await setDoc(ref, { access, updatedAt: serverTimestamp() }, { merge: true });
+    toast(`✖ ${level}: revocado`);
+    await refreshUsers();
+  }
+
+</script>
 </body>
 </html>
