--- a/course.html
+++ b/course.html
@@ -449,6 +449,24 @@
         outline: 2px solid rgba(34,197,94,.35);
         box-shadow: 0 18px 44px rgba(0,0,0,0.18);
       }
+      .readMark{
+        position:absolute;
+        top: 12px;
+        right: 54px;
+        width: 34px;
+        height: 34px;
+        border-radius: 999px;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+        background: rgba(255,255,255,.12);
+        border: 1px solid rgba(255,255,255,.22);
+        color: white;
+        font-weight: 900;
+        backdrop-filter: blur(10px);
+      }
+      .topic.topic-read{ outline: 2px solid rgba(255,255,255,.18); }
+
       .doneMark{
         position:absolute;
         top: 12px;
@@ -471,6 +489,19 @@
   </head>
 
   <body>
+<!-- Global navigation (added) -->
+<div id="globalNav" style="position:fixed;top:16px;left:16px;z-index:9999;display:flex;gap:10px;align-items:center;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;">
+  <button type="button"
+    onclick="(window.history.length>1)?window.history.back():window.location.href='index.html'"
+    style="cursor:pointer;border:1px solid rgba(0,0,0,.12);background:#ffffff;color:#111;padding:10px 12px;border-radius:12px;box-shadow:0 10px 25px rgba(0,0,0,.10);font-weight:600;">
+    ← Powrót
+  </button>
+  <a href="index.html"
+    style="text-decoration:none;border:1px solid rgba(0,0,0,.12);background:#ffffff;color:#111;padding:10px 12px;border-radius:12px;box-shadow:0 10px 25px rgba(0,0,0,.10);font-weight:600;display:inline-flex;gap:8px;align-items:center;">
+    🏠 Strona główna
+  </a>
+</div>
+
     <header class="nav-glass">
       <div class="container nav-inner">
         <div class="brand">
@@ -798,6 +829,7 @@
       const LS_VISITED_KEY = `aquivivo_visited_${LEVEL}`;
       const LS_LAST_KEY = `aquivivo_lastLesson_${LEVEL}`;
       const LS_DONE_KEY = `aquivivo_done_${LEVEL}`;
+      const LS_READ_KEY = `aquivivo_read_${LEVEL}`;
 
       function getVisitedSet() {
         try {
@@ -813,6 +845,20 @@
           localStorage.setItem(LS_VISITED_KEY, JSON.stringify(Array.from(set)));
         } catch {}
       }
+      
+      function getReadSet() {
+        try {
+          const arr = JSON.parse(localStorage.getItem(LS_READ_KEY) || '[]');
+          return new Set(Array.isArray(arr) ? arr : []);
+        } catch {
+          return new Set();
+        }
+      }
+
+      function isRead(topicId){
+        return getReadSet().has(topicId);
+      }
+
       function getDoneSet() {
         try {
           const arr = JSON.parse(localStorage.getItem(LS_DONE_KEY) || '[]');
@@ -1014,8 +1060,9 @@
             : `<span class="chip chip-muted">#—</span>`;
 
         return `
-          <div class="card topic ${(typeof isDone==='function' && isDone(t.id)) ? "topic-done" : ""}" role="button" tabindex="0" onclick="openLesson('${t.id}')" onkeydown="if(event.key==='Enter'||event.key===' '){event.preventDefault(); openLesson('${t.id}') }">
+          <div class="card topic ${((typeof isDone==='function' && isDone(t.id)) ? "topic-done" : "") + ((typeof isRead==='function' && isRead(t.id)) ? " topic-read" : "")}" role="button" tabindex="0" onclick="openLesson('${t.id}')" onkeydown="if(event.key==='Enter'||event.key===' '){event.preventDefault(); openLesson('${t.id}') }">
             ${adminButtons}
+            ${(typeof isRead==='function' && isRead(t.id)) ? `<div class="readMark" title="Lekcja przeczytana">📘</div>` : ``}
             ${(typeof isDone==='function' && isDone(t.id)) ? `<div class="doneMark" title="Terminado">✅</div>` : ``}
             <div class="topic-head">
               <div class="topic-title">
