--- a/lessonpage.html
+++ b/lessonpage.html
@@ -215,6 +215,28 @@
     const btnReload = document.getElementById("btnReload");
     const toastEl = document.getElementById("toast");
 
+    
+    const READ_KEY = `aquivivo_read_${LEVEL}`;
+
+    function markRead(){
+      const arr = JSON.parse(localStorage.getItem(READ_KEY) || "[]");
+      if(!arr.includes(TOPIC_ID)) arr.push(TOPIC_ID);
+      localStorage.setItem(READ_KEY, JSON.stringify(arr));
+      updateReadStatus();
+      toast("📘 Lekcja oznaczona jako przeczytana");
+    }
+
+    function updateReadStatus(){
+      const arr = JSON.parse(localStorage.getItem(READ_KEY) || "[]");
+      const el = document.getElementById("readStatus");
+      if(arr.includes(TOPIC_ID)){
+        el.textContent = "Status: ✔️ przeczytana";
+      } else {
+        el.textContent = "Status: ⏳ nieprzeczytana";
+      }
+    }
+
+
     function toast(msg){
       toastEl.textContent = msg;
       toastEl.classList.add("show");
@@ -314,7 +336,7 @@
       if(admin){
         btnSave.addEventListener("click", saveLesson);
         btnReload.addEventListener("click", async ()=>{
-          await reloadAll();
+          await reloadAll(); updateReadStatus();
           toast("↩️ Wczytano");
         });
       }
@@ -329,16 +351,42 @@
         await reloadAll();
       } catch {}
     });
-  </script>
+  
+    document.getElementById("markReadBtn")?.addEventListener("click", markRead);
+</script>
+
 </head>
 
 <body>
+<!-- Global navigation (added) -->
+<div id="globalNav" style="position:fixed;top:16px;left:16px;z-index:9999;display:flex;gap:10px;align-items:center;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;">
+  <button type="button"
+    onclick="(window.history.length>1)?window.history.back():window.location.href='index.html'"
+    style="cursor:pointer;border:1px solid rgba(0,0,0,.12);background:#ffffff;color:#111;padding:10px 12px;border-radius:12px;box-shadow:0 10px 25px rgba(0,0,0,.10);font-weight:600;">
+    ← Powrót
+  </button>
+  <a href="index.html"
+    style="text-decoration:none;border:1px solid rgba(0,0,0,.12);background:#ffffff;color:#111;padding:10px 12px;border-radius:12px;box-shadow:0 10px 25px rgba(0,0,0,.10);font-weight:600;display:inline-flex;gap:8px;align-items:center;">
+    🏠 Strona główna
+  </a>
+</div>
+
+
+  <div style="background:#003893; padding:12px 18px; display:flex; justify-content:space-between; align-items:center;">
+    <div style="font-weight:900; color:white; font-size:20px;">Aqui vivo</div>
+    <div style="display:flex; gap:12px; flex-wrap:wrap;">
+      <a href="course.html?level=${encodeURIComponent(LEVEL)}" class="btn">← Volver al curso</a>
+      <a href="course.html" class="btn">📚 Niveles</a>
+      <a id="goExercises" class="btn btn-yellow">🧩 Ir a ejercicios</a>
+    </div>
+  </div>
+
   <div class="wrap">
     <div class="topbar">
       <div class="brand">AquiVivo — Lekcja 📘</div>
       <div style="display:flex; gap:10px; flex-wrap:wrap;">
         <a class="btn" id="backToCourse" href="course.html">← Tematy</a>
-        <a class="btn btn-yellow" id="goExercises" href="lesson.html">🧩 Ćwiczenia</a>
+        <a class="btn btn-yellow" id="goExercises" href="#">🧩 Ćwiczenia</a>
       </div>
     </div>
 
@@ -363,7 +411,15 @@
       </div>
 
       <div id="lessonHtml" class="lessonHtml"></div>
+    
+    <div class="contentCard">
+      <div class="contentHead">
+        <h2>📖 Progreso de la lección</h2>
+      </div>
+      <button class="btn btn-yellow" id="markReadBtn">✅ Marcar como leída</button>
+      <span id="readStatus" style="margin-left:10px; font-weight:900;"></span>
     </div>
+
 
     <div class="adminBox" id="adminBox" style="display:none;">
       <div style="font-weight:900; margin-bottom:10px;">👑 Admin — edytuj lekcję (długie treści + obrazki)</div>
