--- a/course.html
+++ b/course.html
@@ -486,22 +486,36 @@
 
 
     </style>
-  </head>
+  
+  <style id="av-shared-css">
+    /* AquiVivo shared header/footer (ES) */
+    .av-shell{min-height:100vh; display:flex; flex-direction:column;}
+    .av-main{flex:1;}
+    .av-footer{margin-top:28px; padding:18px 0; border-top:1px solid rgba(255,255,255,.14); background:rgba(0,0,0,.06);}
+    .av-footer .av-footer__inner{display:flex; justify-content:space-between; align-items:center; gap:12px; flex-wrap:wrap;}
+    .av-footer a, .av-footer button{color:rgba(255,255,255,.92); font-weight:800; font-size:14px; text-decoration:none;}
+    .av-footer a:hover, .av-footer button:hover{text-decoration:underline;}
+    .av-footer button{background:none; border:none; padding:0; cursor:pointer;}
+    /* keep buttons consistent */
+    .av-navbtn{cursor:pointer;}
+  </style>
+
+
+  <script id="av-goBack">
+    window.goBack = function(){
+      try{
+        if (window.history && window.history.length > 1) { window.history.back(); }
+        else { window.location.href = 'index.html'; }
+      } catch(e){
+        window.location.href = 'index.html';
+      }
+    };
+  </script>
+
+</head>
 
   <body>
-<!-- Global navigation (added) -->
-<div id="globalNav" style="position:fixed;top:16px;left:16px;z-index:9999;display:flex;gap:10px;align-items:center;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;">
-  <button type="button"
-    onclick="(window.history.length>1)?window.history.back():window.location.href='index.html'"
-    style="cursor:pointer;border:1px solid rgba(0,0,0,.12);background:#ffffff;color:#111;padding:10px 12px;border-radius:12px;box-shadow:0 10px 25px rgba(0,0,0,.10);font-weight:600;">
-    ← Powrót
-  </button>
-  <a href="index.html"
-    style="text-decoration:none;border:1px solid rgba(0,0,0,.12);background:#ffffff;color:#111;padding:10px 12px;border-radius:12px;box-shadow:0 10px 25px rgba(0,0,0,.10);font-weight:600;display:inline-flex;gap:8px;align-items:center;">
-    🏠 Strona główna
-  </a>
-</div>
-
+<div class="av-shell">
     <header class="nav-glass">
       <div class="container nav-inner">
         <div class="brand">
@@ -516,7 +530,7 @@
       </div>
     </header>
 
-    <main class="page">
+    <main class="page"><div class="av-main">
       <div class="container">
         <div class="titleRow">
           <div style="font-size: 44px; line-height: 1">📘</div>
@@ -709,7 +723,7 @@
           </p>
         </div>
       </div>
-    </main>
+    </div></main>
 
     <!-- 🔥 Firebase -->
     <script type="module">
@@ -1221,5 +1235,21 @@
   
     <div id="toast" class="toast" role="status" aria-live="polite" aria-atomic="true"></div>
 
-  </body>
+  
+</div>
+
+  <footer class="av-footer" id="av-footer">
+    <div class="container av-footer__inner">
+      <div>© <span id="avYear"></span> AquiVivo</div>
+      <div style="display:flex; gap:12px; align-items:center;">
+        <a href="index.html">Inicio</a>
+        <button type="button" onclick="goBack()">Atrás</button>
+      </div>
+    </div>
+  </footer>
+  <script>
+    (function(){var y=document.getElementById('avYear'); if(y) y.textContent=new Date().getFullYear();})();
+  </script>
+
+</body>
 </html>
