--- a/index.html
+++ b/index.html
@@ -12,36 +12,10 @@
   <link rel="stylesheet" href="assets/css/styles.css">
   <script src="/_sdk/data_sdk.js" type="text/javascript"></script>
   <style>@view-transition { navigation: auto; }</style>
- 
-  <style id="av-shared-css">
-    /* AquiVivo shared header/footer (ES) */
-    .av-shell{min-height:100vh; display:flex; flex-direction:column;}
-    .av-main{flex:1;}
-    .av-footer{margin-top:28px; padding:18px 0; border-top:1px solid rgba(255,255,255,.14); background:rgba(0,0,0,.06);}
-    .av-footer .av-footer__inner{display:flex; justify-content:space-between; align-items:center; gap:12px; flex-wrap:wrap;}
-    .av-footer a, .av-footer button{color:rgba(255,255,255,.92); font-weight:800; font-size:14px; text-decoration:none;}
-    .av-footer a:hover, .av-footer button:hover{text-decoration:underline;}
-    .av-footer button{background:none; border:none; padding:0; cursor:pointer;}
-    /* keep buttons consistent */
-    .av-navbtn{cursor:pointer;}
-  </style>
-
-
-  <script id="av-goBack">
-    window.goBack = function(){
-      try{
-        if (window.history && window.history.length > 1) { window.history.back(); }
-        else { window.location.href = 'index.html'; }
-      } catch(e){
-        window.location.href = 'index.html';
-      }
-    };
-  </script>
-
-</head>
+ </head>
  <body class="h-full font-body bg-blue-main text-white">
-<div class="av-shell">
-  <div class="av-main"><div class="w-full h-full overflow-auto"><!-- Navigation -->
+  <div id="appHeader"></div>
+  <div class="w-full h-full overflow-auto"><!-- Navigation -->
    <nav class="fixed top-0 left-0 right-0 z-50 nav-glass">
     <div class="max-w-7xl mx-auto px-6 py-5">
      <div class="flex items-center justify-between">
@@ -698,21 +672,7 @@
       }
     });
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9c19da009511bf88',t:'MTc2OTAzMDM4NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
-</div>
-
-  <footer class="av-footer" id="av-footer">
-    <div class="container av-footer__inner">
-      <div>© <span id="avYear"></span> AquiVivo</div>
-      <div style="display:flex; gap:12px; align-items:center;">
-        <a href="index.html">Inicio</a>
-        <button type="button" onclick="goBack()">Atrás</button>
-      </div>
-    </div>
-  </footer>
-  <script>
-    (function(){var y=document.getElementById('avYear'); if(y) y.textContent=new Date().getFullYear();})();
-  </script>
-
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9c19da009511bf88',t:'MTc2OTAzMDM4NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>  <div id="appFooter"></div>
+  <script src="assets/js/layout.js"></script>
 </body>
 </html>
