--- a/index.html
+++ b/index.html
@@ -562,61 +562,7 @@
       </div>
      </div>
     </div>
-   </section><!-- Footer -->
-<footer class="nav-glass text-white py-1 border-t-2 border-yellow-400 w-full z-50 text-xs">
-    <div class="max-w-7xl mx-auto px-2">
-     <div class="grid md:grid-cols-4 gap-1 mb-1">
-      <div class="space-y-0.5">
-       <div class="flex items-center gap-1">
-        <svg class="w-6 h-6 drop-shadow-lg" viewbox="0 0 300 320" xmlns="http://www.w3.org/2000/svg"><defs>
-          <lineargradient id="colombiaFlagFooter" x1="0%" y1="0%" x2="0%" y2="100%">
-           <stop offset="0%" style="stop-color:#FCD116;stop-opacity:1" />
-           <stop offset="50%" style="stop-color:#FCD116;stop-opacity:1" />
-           <stop offset="50%" style="stop-color:#003893;stop-opacity:1" />
-           <stop offset="75%" style="stop-color:#003893;stop-opacity:1" />
-           <stop offset="75%" style="stop-color:#CE1126;stop-opacity:1" />
-           <stop offset="100%" style="stop-color:#CE1126;stop-opacity:1" />
-          </lineargradient>
-         </defs> <path d="M 40,85 L 45,80 L 52,75 L 60,72 L 70,70 L 82,68 L 95,67 L 110,67 L 125,68 L 140,69 L 155,71 L 170,74 L 185,78 L 198,83 L 210,89 L 220,96 L 228,104 L 234,113 L 238,123 L 240,133 L 241,145 L 240,158 L 238,172 L 234,186 L 230,200 L 225,214 L 218,228 L 210,241 L 200,253 L 188,263 L 174,271 L 158,277 L 140,281 L 120,283 L 100,283 L 80,280 L 62,275 L 46,268 L 32,259 L 22,248 L 15,236 L 10,223 L 7,210 L 5,197 L 5,184 L 6,171 L 8,158 L 11,145 L 15,132 L 20,120 L 26,108 L 33,97 Z" fill="url(#colombiaFlagFooter)" stroke="#FCD116" stroke-width="2.5" />
-        </svg><span class="font-display text-xs font-black text-yellow-400">Aqui vivo</span>
-       </div>
-       <div class="mt-0.5">
-         <p class="text-blue-200 text-[10px]">© 2026 Aqui vivo. Wszelkie prawa zastrzeżone.</p>
-         <p class="text-blue-200 text-[10px]">Nauczycielka hiszpańskiego i polskiego w Let's Talk Poznań. Pomogę Ci przestać bać się mówić 🌸🤍</p>
-       </div>
-      </div>
-      <div>
-       <h4 class="font-bold mb-1 text-yellow-400 text-xs">Usługi</h4>
-       <ul class="space-y-0.5 text-blue-200 text-[10px]">
-        <li><a href="https://aquivivo.github.io/aquivivo/plpolski.html" class="hover:text-yellow-400 transition-colors">Kurs Polskiego</a></li>
-        <li><a href="https://aquivivo.github.io/aquivivo/plpomoc.html" class="hover:text-yellow-400 transition-colors">Pomoc z Formalnościami</a></li>
-        <li><a href="https://aquivivo.github.io/aquivivo/pltlumaczenie.html" class="hover:text-yellow-400 transition-colors">Tłumaczenia</a></li>
-        <li><a href="https://aquivivo.github.io/aquivivo/plzajecia.html" class="hover:text-yellow-400 transition-colors">Zajęcia Grupowe</a></li>
-
-       </ul>
-      </div>
-      <div>
-       <h4 class="font-bold mb-1 text-yellow-400 text-xs">Zasoby</h4>
-       <ul class="space-y-0.5 text-blue-200 text-[10px]">
-        <li><a href="https://aquivivo.github.io/aquivivo/plebooks.html" class="hover:text-yellow-400 transition-colors">E-booki</a></li>
-        <li><a href="#inicio" class="hover:text-yellow-400 transition-colors">O Mnie</a></li>
-        <li><a href="https://aquivivo.github.io/aquivivo/plblog.html" class="hover:text-yellow-400 transition-colors">Blog</a></li>
-        <li><a href="https://aquivivo.github.io/aquivivo/plFAQ.html" class="hover:text-yellow-400 transition-colors">FAQ</a></li>
-       </ul>
-      </div>
-      <div>
-       <h4 class="font-bold mb-1 text-yellow-400 text-xs">Informacje Prawne</h4>
-       <ul class="space-y-0.5 text-blue-200 text-[10px]">
-        <li><a href="https://aquivivo.github.io/aquivivo/plprywatnosc.html" class="hover:text-yellow-400 transition-colors">Polityka Prywatności</a></li>
-        <li><a href="https://aquivivo.github.io/aquivivo/plwarunki.html" class="hover:text-yellow-400 transition-colors">Regulamin</a></li>
-        <li><a href="https://aquivivo.github.io/aquivivo/plcookies.html" class="hover:text-yellow-400 transition-colors">Cookies</a></li>
-        <li><span class="block text-blue-200 text-[10px] mt-0.5">Stworzone z <span class="text-red-500">❤️</span> w Poznaniu, Polska</span></li>
-       </ul>
-      </div>
-     </div>
-    </div>
-   </footer>
-  </div>
+   </section></div>
   <script>
     const contactForm = document.getElementById('contact-form');
     const formMessage = document.getElementById('form-message');
@@ -672,7 +618,62 @@
       }
     });
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9c19da009511bf88',t:'MTc2OTAzMDM4NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>  <div id="appFooter"></div>
-  <script src="assets/js/layout.js"></script>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9c19da009511bf88',t:'MTc2OTAzMDM4NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
+
+<!-- Footer -->
+<footer class="nav-glass text-white py-1 border-t-2 border-yellow-400 w-full z-50 text-xs">
+    <div class="max-w-7xl mx-auto px-2">
+     <div class="grid md:grid-cols-4 gap-1 mb-1">
+      <div class="space-y-0.5">
+       <div class="flex items-center gap-1">
+        <svg class="w-6 h-6 drop-shadow-lg" viewbox="0 0 300 320" xmlns="http://www.w3.org/2000/svg"><defs>
+          <lineargradient id="colombiaFlagFooter" x1="0%" y1="0%" x2="0%" y2="100%">
+           <stop offset="0%" style="stop-color:#FCD116;stop-opacity:1" />
+           <stop offset="50%" style="stop-color:#FCD116;stop-opacity:1" />
+           <stop offset="50%" style="stop-color:#003893;stop-opacity:1" />
+           <stop offset="75%" style="stop-color:#003893;stop-opacity:1" />
+           <stop offset="75%" style="stop-color:#CE1126;stop-opacity:1" />
+           <stop offset="100%" style="stop-color:#CE1126;stop-opacity:1" />
+          </lineargradient>
+         </defs> <path d="M 40,85 L 45,80 L 52,75 L 60,72 L 70,70 L 82,68 L 95,67 L 110,67 L 125,68 L 140,69 L 155,71 L 170,74 L 185,78 L 198,83 L 210,89 L 220,96 L 228,104 L 234,113 L 238,123 L 240,133 L 241,145 L 240,158 L 238,172 L 234,186 L 230,200 L 225,214 L 218,228 L 210,241 L 200,253 L 188,263 L 174,271 L 158,277 L 140,281 L 120,283 L 100,283 L 80,280 L 62,275 L 46,268 L 32,259 L 22,248 L 15,236 L 10,223 L 7,210 L 5,197 L 5,184 L 6,171 L 8,158 L 11,145 L 15,132 L 20,120 L 26,108 L 33,97 Z" fill="url(#colombiaFlagFooter)" stroke="#FCD116" stroke-width="2.5" />
+        </svg><span class="font-display text-xs font-black text-yellow-400">Aqui vivo</span>
+       </div>
+       <div class="mt-0.5">
+         <p class="text-blue-200 text-[10px]">© 2026 Aqui vivo. Wszelkie prawa zastrzeżone.</p>
+         <p class="text-blue-200 text-[10px]">Nauczycielka hiszpańskiego i polskiego w Let's Talk Poznań. Pomogę Ci przestać bać się mówić 🌸🤍</p>
+       </div>
+      </div>
+      <div>
+       <h4 class="font-bold mb-1 text-yellow-400 text-xs">Usługi</h4>
+       <ul class="space-y-0.5 text-blue-200 text-[10px]">
+        <li><a href="https://aquivivo.github.io/aquivivo/plpolski.html" class="hover:text-yellow-400 transition-colors">Kurs Polskiego</a></li>
+        <li><a href="https://aquivivo.github.io/aquivivo/plpomoc.html" class="hover:text-yellow-400 transition-colors">Pomoc z Formalnościami</a></li>
+        <li><a href="https://aquivivo.github.io/aquivivo/pltlumaczenie.html" class="hover:text-yellow-400 transition-colors">Tłumaczenia</a></li>
+        <li><a href="https://aquivivo.github.io/aquivivo/plzajecia.html" class="hover:text-yellow-400 transition-colors">Zajęcia Grupowe</a></li>
+
+       </ul>
+      </div>
+      <div>
+       <h4 class="font-bold mb-1 text-yellow-400 text-xs">Zasoby</h4>
+       <ul class="space-y-0.5 text-blue-200 text-[10px]">
+        <li><a href="https://aquivivo.github.io/aquivivo/plebooks.html" class="hover:text-yellow-400 transition-colors">E-booki</a></li>
+        <li><a href="#inicio" class="hover:text-yellow-400 transition-colors">O Mnie</a></li>
+        <li><a href="https://aquivivo.github.io/aquivivo/plblog.html" class="hover:text-yellow-400 transition-colors">Blog</a></li>
+        <li><a href="https://aquivivo.github.io/aquivivo/plFAQ.html" class="hover:text-yellow-400 transition-colors">FAQ</a></li>
+       </ul>
+      </div>
+      <div>
+       <h4 class="font-bold mb-1 text-yellow-400 text-xs">Informacje Prawne</h4>
+       <ul class="space-y-0.5 text-blue-200 text-[10px]">
+        <li><a href="https://aquivivo.github.io/aquivivo/plprywatnosc.html" class="hover:text-yellow-400 transition-colors">Polityka Prywatności</a></li>
+        <li><a href="https://aquivivo.github.io/aquivivo/plwarunki.html" class="hover:text-yellow-400 transition-colors">Regulamin</a></li>
+        <li><a href="https://aquivivo.github.io/aquivivo/plcookies.html" class="hover:text-yellow-400 transition-colors">Cookies</a></li>
+        <li><span class="block text-blue-200 text-[10px] mt-0.5">Stworzone z <span class="text-red-500">❤️</span> w Poznaniu, Polska</span></li>
+       </ul>
+      </div>
+     </div>
+    </div>
+   </footer>
+
 </body>
 </html>
